# godot-telegram

./: .gitignore  Makefile  README.md  backend.Makefile  docker-compose.yml
apps/backend/: .env  .env.secret.example  Dockerfile  alembic.ini  pyproject.toml
apps/backend/app/: config.py  db.py  main.py
apps/backend/app/game_config/: api.py  google_sheets_loader.py  models.py
apps/backend/app/google/: sheets.py  test_sheets.py
apps/backend/app/lib/: mixins.py
apps/backend/app/users/: models.py
apps/backend/db_migrations/: env.py
apps/backend/db_migrations/versions/: b00860940a3d_add_users.py
http_requests/: backend.http
